Bug 96484 - [vulkan] deqp-vk.glsl.builtin.precision.sin / cos regression
Summary: [vulkan] deqp-vk.glsl.builtin.precision.sin / cos regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-10 17:25 UTC by Mark Janes
Modified: 2016-06-14 02:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-06-10 17:25:08 UTC
Mesa d9546b0 changed precise trigonometric calculations to be triggered by drirc instead of an environment variable.

Since Vulkan does not have drirc, related cts tests fail.
Comment 1 Jason Ekstrand 2016-06-14 02:55:30 UTC
The INTEL_PRECISE_TRIG environment variable is back.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.